fix z-index

--- a/bgbanner/patch.css
+++ b/bgbanner/patch.css
@@ -3,9 +3,10 @@
   margin-right: auto;
   width: 100%;
   margin-top: -23px;
-  opacity: 0.2;
+  opacity: 0.3;
   height: 350px;
   position: absolute;
+  z-index: -1;
 }
 .EQQO {
   margin-top: 50px;
